Fix initial data sample loading
Previous implementation allowed to load initial data sample resource
from file system only, not from JAR.